# modularai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DataBaseStructure.drawio  Dockerfile  LICENSE  PLANNING.md  README.md  SystemOverview.drawio  TASK.md  main.py  pyproject.toml  requirements.txt  spark_test.py
#System_Diagrams/xmls/: Server_Service_Structure.xml
System_Diagrams/: SetupGuide.drawio  SystemFlowChart.drawio  api_gateway_flow.dot  architecture.dot  project_structure.txt  service_calls.dot
System_Diagrams/images/: call_graph.dot
System_Diagrams/xmls/: Git_Structure_Rules.xml
core_services/agentic/agent_variants/: __init__.py  agent.py  chat_agent_tool_node_with_filters.py  model_config.py
core_services/database/: base_functions.py  connection.py  init_db.py  main.py  main2.py  models.py  user.yaml
core_services/database_etele/: main.py  spark_session.py  spark_session_jdbc.py
core_services/database_etele/config/: connection.yaml
core_services/dataframe_functions/pandas/: simple_preprocessing.py  time_series.py
domain_services/grocery/: main.py
domain_services/grocery/api/: chat.py  inventory.py  ml.py  products.py
infra/: Dockerfile.api  Dockerfile.streamlit  docker-compose.yml
mlflow/custom/: deployment.py
models/statistical/: RUN.py  main.py
models/statistical/distribution_check/: calculate_fitnes.py
models/unsupervised/: clustering.py
supabase/: config.toml
tests/: test_inventory_api.py  test_products_api.py
webui/ds_workbench/: README.md  config.toml  streamlit_app.py
(+9 files in other folders)
